--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="nav-item"><a href="" class="nav-link">INICIO</a></li>
                 <li class="nav-item"><a href="" class="nav-link">ESTADISTICAS</a></li>
                 <li class="nav-item"><a href="" class="nav-link">INSCRIBITE YA!</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Cambie por pete</a></li>
+                <li class="nav-item"><a href="" class="nav-link">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
