--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             Nisi beatae recusandae a qui nulla, nemo fugit. Quidem, veniam labore nesciunt id eos aspernatur autem, enim deleniti nemo earum, fugiat veritatis quas? Suscipit vitae possimus voluptas, odio voluptatem non.
             Velit nihil commodi unde minus ipsam possimus eius nisi. Commodi nisi amet recusandae distinctio dolore aliquid enim odit labore deserunt eaque vitae doloremque numquam, minima quasi, quam consequuntur ea eos.
            </p>
-           <h2>Lo mejor de la fecaa</h2>
+           <p>RIVER 2 - BOCA 1</p>
         </main>
         <aside class="puestos">
             Tabla de Posiciones
