--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="" id="logo" ><i class="far fa-futbol fa-1x"></i> LPI.com</a>
+            <a href="index.html" id="logo" ><i class="far fa-futbol fa-1x"></i> LPI.com</a>
             <button class="burguer"><i class="fas fa-bars"></i></button>
             <ul class="nav-menu ">
-                <li class="nav-item"><a href="" class="nav-link">INICIO</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">INICIO</a></li>
                 <li class="nav-item"><a href="" class="nav-link">ESTADISTICAS</a></li>
                 <li class="nav-item"><a href="" class="nav-link">INSCRIBITE YA!</a></li>
                 <li class="nav-item"><a href="" class="nav-link">CONTACTO</a></li>
@@ -27,48 +27,31 @@
             <h1>BIENVENIDO A LIGA PRO INFO</h1>
         </div>
         <main class="text-cont">
-            <h2>Lo mejor de la fecha</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi rem id, pariatur maxime quo iusto fugiat culpa harum eum non, voluptas, porro distinctio hic ad fuga consequuntur? Recusandae, doloribus.
-            Vero, dolor fuga quasi magnam enim dolores optio est quo provident esse ducimus dolorum, voluptates inventore aliquid eos eligendi consequuntur perferendis quos aperiam. Nam soluta obcaecati quibusdam ad. Mollitia, aliquam.
-            Iusto assumenda repellat iste aperiam! Ex tempore laborum necessitatibus earum, numquam ullam corporis provident magni repellendus, expedita sunt. Enim deserunt eius in magni aspernatur deleniti optio eum perspiciatis dolores eos.
-            Omnis modi nobis aut autem? Aliquid repudiandae enim expedita asperiores ipsum vero veniam, libero consequuntur cum nihil. Excepturi quidem neque quae veritatis sed corporis assumenda maiores ullam accusamus? Quas, soluta.
-            Earum quos cum architecto quisquam quibusdam accusantium, blanditiis autem corrupti deserunt minima laudantium tempore ipsam perferendis vitae. Suscipit quis maiores, alias provident voluptatum, officia, ut repellat distinctio ab possimus totam!
-            Adipisci repellendus minima libero quidem saepe blanditiis odit optio, repudiandae ducimus temporibus commodi expedita doloribus, sequi odio exercitationem veritatis eius, inventore accusamus esse quod laudantium voluptates? Praesentium animi id unde.
-            Soluta ex possimus doloremque suscipit, eligendi dolor recusandae, perferendis blanditiis commodi quod sit nostrum reprehenderit non est? Aperiam corrupti alias debitis, expedita fugit vitae, maxime modi voluptatem earum dicta architecto.
-            Nemo reiciendis, veritatis accusantium in nisi eveniet! Magnam aut iste maiores doloremque error quos labore delectus explicabo. Autem dolor accusantium adipisci nesciunt perspiciatis ad inventore numquam rem maiores, dolores aperiam?
-            Cupiditate tempore quidem corrupti ratione eius. Suscipit temporibus obcaecati nihil reprehenderit a repellendus dolor autem rerum dolorem, ea facere ipsam amet natus magni eos fuga error quam eveniet consequatur dignissimos?
-            Beatae quidem porro optio deleniti illo architecto. Molestias doloremque illo cumque reiciendis blanditiis voluptas ut nihil dolore, provident nulla expedita quisquam soluta voluptates ab necessitatibus fugit natus consequuntur voluptatem maiores?
-            Nemo modi ratione aut itaque repudiandae nesciunt sint! Optio obcaecati id, aliquid laboriosam soluta provident dolore cupiditate, eveniet, ipsum iste consequatur voluptatum unde numquam veritatis cum quod aperiam fugiat animi.
-            Impedit, cumque a. Excepturi iusto sed sit optio ducimus in non facilis enim, ad cum nam tenetur. Corporis, voluptas at? Odit molestiae minus et atque recusandae rerum rem, blanditiis magni!
-            Ex praesentium similique vero itaque debitis eligendi officiis nostrum maxime neque harum? Laboriosam id necessitatibus nostrum, quo temporibus error modi? Ipsa praesentium iure dolorem, aut qui autem molestias perferendis mollitia.
-            Sit ipsa laborum culpa libero quos quisquam nostrum consequatur itaque possimus dolor quas iusto beatae similique et explicabo, aut vel aspernatur perspiciatis, veniam obcaecati dolore dolorum. Consequuntur porro culpa commodi?
-            Tempora quisquam unde magni repellat velit vel assumenda ab maiores ut dolor possimus explicabo rem facere esse mollitia voluptatum, beatae nihil. Beatae quisquam accusamus voluptatum hic sequi iusto, autem cum!
-            Hic, fuga qui dignissimos laudantium tempora consectetur. Hic, doloribus. Incidunt, cum provident eveniet et aspernatur voluptatum excepturi impedit commodi, recusandae eligendi dolor corporis minima. Ratione aut consequuntur excepturi atque harum?
-            Eum reiciendis non et maxime ipsum adipisci odio dignissimos maiores est! Culpa ab optio velit explicabo laboriosam aperiam, et atque facilis similique autem. Officia, a dicta. Molestiae voluptates iusto officia.
-            Neque officia blanditiis sapiente ipsa. Non impedit reiciendis, repellat maxime eveniet maiores exercitationem tempora laboriosam ex asperiores odio facilis sit ad fugiat? Quasi sequi error magni ad itaque nisi ipsam!
-            Est harum voluptate itaque qui, maiores cum libero rem ex sit totam quam magnam eveniet officiis fugit quidem? Qui temporibus odio ipsum facilis odit placeat pariatur perferendis voluptate at quos.
-            Voluptate quaerat natus, tempore fugit totam eos sapiente debitis qui, voluptatum perferendis laudantium incidunt rerum iure non placeat voluptas excepturi reiciendis quisquam nam dicta? Laudantium, accusamus. Molestias voluptatem exercitationem ut!
-            Optio rem dolor blanditiis necessitatibus ea accusamus, aut nesciunt voluptate placeat officiis molestiae sunt doloremque, animi delectus fuga amet aspernatur rerum neque voluptas ipsum. Rem nobis aut labore tempore minus.
-            Sunt, consectetur alias, inventore saepe blanditiis eaque mollitia voluptatibus nulla, dignissimos praesentium at qui. Quidem non blanditiis, vel doloribus culpa et odit beatae voluptatem ea, animi aut saepe assumenda quas!
-            Illum, libero! Perspiciatis architecto impedit error repellendus, ullam vel, quis eos non amet id, qui voluptates autem reiciendis rem doloribus assumenda eveniet inventore repudiandae quo culpa sequi quos odio fuga.
-            Nobis deleniti, totam porro expedita doloribus ullam repellat in laboriosam deserunt. Nesciunt harum voluptates, distinctio eum nemo sequi, tenetur repudiandae totam commodi minima ab illum! Ut, iusto. Ut, culpa suscipit!
-            A eum dolorum, voluptas et ea laboriosam nulla nobis, in excepturi iusto sapiente. Facilis eligendi animi maiores neque impedit fuga soluta reprehenderit veritatis obcaecati incidunt culpa quibusdam nobis, tempora excepturi?
-            Qui, ipsam. Ducimus ab quo nobis harum esse eos quos deserunt quisquam, ipsam cupiditate tempore, quaerat fugiat quasi, obcaecati vero repudiandae voluptas! Quo maiores eaque fugiat voluptatem distinctio? Facilis, voluptas!
-            Expedita recusandae, magnam adipisci ducimus quasi officia. Nobis id enim impedit commodi aut repudiandae facilis beatae voluptate deserunt temporibus quae sit, inventore distinctio nesciunt aperiam nulla molestias blanditiis quis libero.
-            Pariatur, neque incidunt animi velit maiores omnis! Sit expedita, cum itaque illum ipsam perferendis assumenda, deleniti minus, exercitationem maxime recusandae! Nihil commodi laborum quas quia voluptate quisquam doloremque, animi tempora?
-            Laudantium delectus alias nesciunt tempore commodi, praesentium perferendis voluptatibus odio tenetur iusto ipsa quas eligendi totam magni, itaque sit soluta voluptate labore similique tempora et placeat nemo architecto quod? Vitae.
-            Inventore perspiciatis quisquam nobis odio harum sit necessitatibus natus? Accusamus eum iure, beatae necessitatibus eius provident non deserunt praesentium ducimus quam ratione corporis, vero aperiam, eligendi consequuntur? Debitis, ab mollitia!
-            Culpa perspiciatis autem quam. Beatae maiores odio, inventore, iure illum maxime nemo quae aut officia vitae, aperiam animi ea. Earum iste necessitatibus velit quos sunt dolorum neque esse commodi debitis.
-            Nisi beatae recusandae a qui nulla, nemo fugit. Quidem, veniam labore nesciunt id eos aspernatur autem, enim deleniti nemo earum, fugiat veritatis quas? Suscipit vitae possimus voluptas, odio voluptatem non.
-            Velit nihil commodi unde minus ipsam possimus eius nisi. Commodi nisi amet recusandae distinctio dolore aliquid enim odit labore deserunt eaque vitae doloremque numquam, minima quasi, quam consequuntur ea eos.
+            <h2>El SUPERCLASICO FUE PARA EL MILLONARIO Y LLEGA A LA PUNTA SOLO</h2>
+            <article >
+                
+            </article>
+            <p class="txt-principal">
+                <img class="img-encabezado" src="img/julialvarez.jpg" alt="no anda">
+                No fue un campeonato, no. Pero los jugadores, un Gallardo con los ojos vidriosos y los hinchas, unos saltando en la tierra y 
+
+                los otros delirando en el cielo, lo festejaron como si lo hubiera sido.
+
+                El equipo (de un) chico fue River. De un chico que se recibió de grande jugando el partido soñado. Porque Julián Álvarez, talento precoz que a los 18 había asomado su desfachatez en la final de Madrid, tres años después rindió la última materia para diplomarse de crack. Y para hacer que el quinto River-Boca del 2021 se haya ganado un lugar en la memoria colectiva de los hinchas millonarios como el superclásico de Julián.
+
+                Un partido que se quebró en un minuto. Entre los 14 y los 15 del primer tiempo, cuando dos patadas a destiempo de un Rojo que se había empecinado en copar la parada derivaron en un cartón del color de su apellido. No alcanzó ese cuarto de hora para comprobar si el equipo de Ba-ttaglia iba a adoptar una postura más protagónica que sus pragmáticos antecesores.
+
+                Sobraron los 75 restantes, eso sí, para advertir una apabullante superioridad de River. Que no sólo le ganó a Boca por primera vez en el Monumental en el ciclo Gallardo por ligas locales, le quitó el invicto al flamante entrenador rival, se acomodó la chapa de candidato que ya traía y se dio el gusto de regarles una vuelta a las tribunas a su gente que no se olvidará por mucho tiempo: más importante que todo eso es que su victoria fue conceptual, porque ganó a lo River. A lo River de Gallardo.
+
+                Si Julián fue el autor material de esta victoria y Rojo su partícipe necesario, Agustín Rossi sin dudas fue el cómplice del mejor jugador de la cancha. Porque además de devorarse la extraña parábola del remate del 9 que presagió la fiesta, contribuyó con su mala salida con los pies para que el anticipo de Casco y su posterior pared con el pibe Simón (otro que juega simulando tener muchos más años que los que registra su DNI) terminara con ese delicioso tac pegado a un palo de la figura del show. Un espectáculo tal como esperaba el Muñeco, acaso premonitoriamente vestido para la ocasión, ya que salió a escena con una corbata labrunesca que le agregó una pizca de sabor a la victoria por ese guiño con la historia.
            </p>
-           <p>RIVER 2 - BOCA 1</p>
+          
         </main>
         <aside class="puestos">
             Tabla de Posiciones
         </aside>
         <div class="pie">
-            Pie de pagina
+              <label class="txt-pie">© 2021 LIGAProInfo </label>  <label class="txt-pie"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie"><i class="fab fa-whatsapp"></i>3894-987654</label>
         </div>
 
 
