--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </table>
         </aside>
         <div class="pie">
-              <label class="txt-pie">© 2021 LIGAProInfo </label>  <label class="txt-pie"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie"><i class="fab fa-whatsapp"></i>3894-987654</label>
+              <label class="txt-pie1">©2021 LIGAProInfo </label>  <label class="txt-pie2"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie3"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie4"><i class="fab fa-whatsapp"></i>3894-987654</label>
         </div>
 
 
