gran avance en estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -18,7 +18,150 @@
                 <li class="nav-item"><a href="index.html" class="nav-link">INICIO</a></li>
                 <li class="nav-item"><a href="estadisticas.html" class="nav-link">ESTADISTICAS</a></li>
                 <li class="nav-item"><a href="" class="nav-link">INSCRIBITE YA!</a></li>
-                <li class="nav-item"><a href="" class="nav-link">CONTACTO</a></li>
+
             </ul>
         </nav>
     </header>
+
+    <div class="container">
+    <div class="titu">
+        <h1>ESTADISTICAS DEL TORNEO</h1>
+    </div>
+    <div class="stats">
+        <div id="celda1">
+            <img src="img/enzo.jpg" alt="no anda">
+            <h4>MVP:ENZO PEREZ</h4>
+            <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
+        </div>
+        <div id="celda2">
+            <img src="img/izquierdoz.jpg" alt="no anda">
+            <h4>"EL MURO": IZQUIERDOZ</h4>
+            <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
+        </div>
+        <div id="celda3">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id odit obcaecati ipsa labore? Dolorum beatae enim dicta voluptas repudiandae laborum et, autem reiciendis vitae, voluptatem commodi sint quasi ad accusamus? Labore expedita eligendi optio beatae, est quod omnis laborum numquam ipsam tenetur? Debitis dolorem molestias impedit fuga possimus aliquam vitae.
+        </div>
+        <div id="celda4">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+        </div>
+        <div id="celda5">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+        </div>
+        <div id="celda6">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+        </div>
+
+    </div>
+    <div class="tablas">
+        <h2 class="tit-tabla">GOLEADORES</h2>
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th>JUGADOR</th>
+                    <th>EQUIPO</th>
+                    <th>GOLES</th>        
+                </tr>
+            </thead>    
+                <tr>
+                    <td>J.ALVAREZ</td>
+                    <td>RIVER</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>ORSINI</td>
+                    <td>BOCA</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>PULGUITA</td>
+                    <td>GYE LP</td>
+                    <td>7</td>
+                </tr>
+        </table>
+        <br>
+        <br>
+        <h2 class="tit-tabla">ASISTENCIAS</h2>
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th>JUGADOR</th>
+                    <th>EQUIPO</th>
+                    <th>ASISTS</th>        
+                </tr>
+            </thead>    
+                <tr>
+                    <td>ORTIGOZA</td>
+                    <td>CASLA</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>PONZIO</td>
+                    <td>RIVER</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>PIATTI</td>
+                    <td>RACING</td>
+                    <td>5</td>
+                </tr>
+        </table>
+        <br>
+        <br>
+        <h2 class="tit-tabla">VALLA INVICTA</h2>
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th>JUGADOR</th>
+                    <th>EQUIPO</th>
+                    <th>INVICTOS</th>        
+                </tr>
+            </thead>    
+                <tr>
+                    <td>ARMANI</td>
+                    <td>RIVER</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>ROSSI</td>
+                    <td>BOCA</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>ENZO PEREZ</td>
+                    <td>RIVER</td>
+                    <td>1</td>
+                </tr>
+        </table>
+
+    </div>
+    
+    <div class="pie">
+        <label class="txt-pie1">©2021 LIGAProInfo </label>  <label class="txt-pie2"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie3"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie4"><i class="fab fa-whatsapp"></i>3894-987654</label>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+</body>
