fin estadisticas sin responsive

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -30,7 +30,7 @@
     <div class="stats">
         <div id="celda1">
             <img src="img/enzo.jpg" alt="no anda">
-            <h4>MVP:ENZO PEREZ</h4>
+            <h4>"MVP":ENZO PEREZ</h4>
             <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
         </div>
         <div id="celda2">
@@ -39,16 +39,26 @@
             <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
         </div>
         <div id="celda3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id odit obcaecati ipsa labore? Dolorum beatae enim dicta voluptas repudiandae laborum et, autem reiciendis vitae, voluptatem commodi sint quasi ad accusamus? Labore expedita eligendi optio beatae, est quod omnis laborum numquam ipsam tenetur? Debitis dolorem molestias impedit fuga possimus aliquam vitae.
+            <img src="img/rossi.jpg" alt="no anda">
+            <h4>"PARA QUE TE TRAJE": ROSSI</h4>
+            <p>Con dos graves errores en el superclasico el portero Xeneize se lleva el puesto al "Para que te traje " de la fecha 15</p>
+
         </div>
         <div id="celda4">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+            <img src="img/pulguita.jpg" alt="no anda">
+            <h4>"EL GOLAZO": PULGUITA</h4>
+            <p>Con una chilena desde mitad de chancha, al mejor estilo Ibrahimovic, Rodriguez se lleva el premio al golazo de la fecha</p>
         </div>
         <div id="celda5">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+            <img src="img/ricky.jpg" alt="no anda">
+            <h4>"EL LIRICO": CENTURION</h4>
+            <p>Con un partido a pura gambeta, tuneles y sombreritos, el "Ricky" se lleva el premio al lirico de la fecha.</p>
         </div>
         <div id="celda6">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, asperiores recusandae minus nulla, soluta exercitationem autem error eos natus iste voluptates ad tempore itaque officia! Esse a nisi obcaecati perspiciatis nihil, ducimus quae recusandae temporibus facilis atque beatae aspernatur praesentium veritatis quis excepturi ullam placeat? Quasi eius debitis facere non?hola
+            <img src="img/colocha.jpg" alt="no anda">
+            <h4>"EL RUSTICO": COLOCCINI</h4>
+            <p>Con una patada digna de arresto domiciliario el Jugador de Aldosivi se lleva el premio del Rustico de la fecha</p>
+            
         </div>
 
     </div>
