Fin Estadisticas Responsive

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -31,12 +31,12 @@
         <div id="celda1">
             <img src="img/enzo.jpg" alt="no anda">
             <h4>"MVP":ENZO PEREZ</h4>
-            <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
+            <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98%. El 5 Millonario se lleva el premio al Mejor Jugador de la fecha</p>
         </div>
         <div id="celda2">
             <img src="img/izquierdoz.jpg" alt="no anda">
             <h4>"EL MURO": IZQUIERDOZ</h4>
-            <p>Eljugador de River fue la figura con un partido perfecto contra boca, una eficacia de pases correctos del 98% bla bla bla</p>
+            <p>El defensor xeneixe fue el mas solido de la fecha,ganando todo por arriba y todos los duelos por abajo, se lleva el premio al mejor defensor de la fecha</p>
         </div>
         <div id="celda3">
             <img src="img/rossi.jpg" alt="no anda">
