--- a/estadisticas.html
+++ b/estadisticas.html
@@ -17,7 +17,7 @@
             <ul class="nav-menu ">
                 <li class="nav-item"><a href="index.html" class="nav-link">INICIO</a></li>
                 <li class="nav-item"><a href="estadisticas.html" class="nav-link">ESTADISTICAS</a></li>
-                <li class="nav-item"><a href="" class="nav-link">INSCRIBITE YA!</a></li>
+                <li class="nav-item"><a href="inscripcion.html" class="nav-link">INSCRIBITE YA!</a></li>
 
             </ul>
         </nav>
