fin de inscripcion

--- a/inscripcion.html
+++ b/inscripcion.html
@@ -23,5 +23,33 @@
         </nav>
     </header>
 
+    <div class="container">
+        <div class="titulo">
+            <h1>Inscribite Ahora !</h1>
+            <h3>Inscribite para recibir en tu correo información diaria actualizada sobre la primera division del futbol argentino</h3>
+        </div>
+        <div id="bloque1"></div>
+        <form action="" class="formulario" >
+            <label for="mail"><i class="fas fa-at fa-1x"></i> E-mail:</label><br>
+            <input type="email" name="mail" id="email">
+            <br><br>
+            <label for="Usuario"><i class="fas fa-user-plus fa-1x"></i> Usuario:</label><br>
+            <input type="text" name="Usuario" id="user">
+            <br><br>
+            <label for="pass"><i class="fas fa-key fa-1x"></i> Contraseña:</label><br>
+            <input type="password" name="pass" id="contra">
+            <br><br>
+            <label for="pass2"> <i class="fas fa-lock fa-1x"></i> Re-ingrese Contraseña:</label><br>
+            <input type="password" name="pass2" id="contra2"><br><br>
+            <button type="submit">Susbribirte</button>
 
+            <p class="warnings"></p>
+        </form>
+        <div id="bloque2"></div>
+        <div class="pie">
+            <label class="txt-pie1">©2021 LIGAProInfo </label>  <label class="txt-pie2"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie3"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie4"><i class="fab fa-whatsapp"></i>3894-987654</label>
+        </div>
+    </div>
+   
+    <script src="javascript/validar.js"></script>
 </body>
