--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <span><img class="img-encabezado" src="img/julialvarez.jpg" alt="no anda"></span>
             <p class="txt-principal">
-                No fue un campeonato, no. Pero los jugadores, un Gallardo con los ojos vidriosos y los hinchas, unos saltando en la tierra y 
+                Esto no fue un campeonato, no. Pero los jugadores, un Gallardo con los ojos vidriosos y los hinchas, unos saltando en la tierra y 
 
                 los otros delirando en el cielo, lo festejaron como si lo hubiera sido.
 
