fin de formulario y fin de proyecto

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -23,6 +23,9 @@
         </nav>
     </header>
 
+
+    <!-- Seccionde Premios -->
+
     <div class="container">
     <div class="titu">
         <h1>ESTADISTICAS DEL TORNEO</h1>
@@ -62,6 +65,10 @@
         </div>
 
     </div>
+
+
+    <!-- Seccion Tablas de Estadisticas  -->
+
     <div class="tablas">
         <h2 class="tit-tabla">GOLEADORES</h2>
         <table class="tabla">
@@ -144,7 +151,10 @@
         </table>
 
     </div>
-    
+
+    <!-- Footer de la Pagina -->
+
+
     <div class="pie">
         <label class="txt-pie1">©2021 LIGAProInfo </label>  <label class="txt-pie2"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie3"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie4"><i class="fab fa-whatsapp"></i>3894-987654</label>
     </div>
