--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>PAGINA INTEGRADOR</title>
 </head>
 <body>
+
+    <!-- Barra de Navegacion -->
+
     <header>
         <nav class="nav">
             <a href="index.html" id="logo" ><i class="far fa-futbol fa-1x"></i> LPI.com</a>
@@ -22,6 +25,9 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Seccion Principal -->
+
     <div class="contenedor">
         <div class="titulo">
             <h1>BIENVENIDO A LIGA PRO INFO</h1>
@@ -46,6 +52,9 @@
            </p>
           
         </main>
+
+        <!-- Tabla de Posiciones  -->
+
         <aside class="puestos">
             <h2 class="tit-tabla">TABLA DE POSICIONES</h2>
             <table class="tabla">
@@ -189,6 +198,11 @@
                 
             </table>
         </aside>
+
+
+        <!-- Seccion de Footer -->
+
+
         <div class="pie">
               <label class="txt-pie1">©2021 LIGAProInfo </label>  <label class="txt-pie2"><i class="fab fa-instagram fa-1x"></i>LIGAProOK</label>  <label class="txt-pie3"><i class="fab fa-twitter-square fa-1x"></i>LIGAProOK</label> <label class="txt-pie4"><i class="fab fa-whatsapp"></i>3894-987654</label>
         </div>
