--- a/inscripcion.html
+++ b/inscripcion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/inscripcion.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <script defer src="javascript/index.js"></script>
-    <title>PAGINA INTEGRADOR</title>
+    <title>LFP Info</title>
 </head>
 <body>
     <header>
